<resources>
    <string name="app_name">FitnessEMP</string>
    <string name="getfit">GetFit</string>
    <string name="home1">Home</string>
    <string name="vaje">Vaje</string>
    <string name="koledar">Koledar</string>
    <string name="toparica">Štoparica</string>
    <string name="grafi">Grafi</string>
    <string name="zemljevid">Zemljevid</string>
    <string name="pomo">Pomoč</string>
    <string name="domov1">Domov</string>
    <string name="open">open</string>
    <string name="pleaseWait">please wait</string>
    <string name="cancel">cancel</string>
    <string name="close">close</string>
    <string name="fit">fit</string>
    <string name="getfit1">GetFit</string>
    <string name="active_exercises">Active Exercises</string>
    <string name="domov2">Domov</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="active_exercises1">Active Exercises:</string>
    <string name="daily_goals">Daily Goals:</string>
    <string name="activeworkoutshere">- ActiveWorkoutsHere</string>
    <string name="active_workouts_here">- Active workouts here...</string>
    <string name="todo1">TODO</string>
    <string name="add_exercise1">Add Exercise:</string>
    <string name="domov">Domov</string>
    <string name="home">Home</string>
    <string name="exercises1">Exercises</string>
    <string name="help1">Help</string>
    <string name="maps1">Maps</string>
    <string name="stopwatch1">Stopwatch</string>
    <string name="graphs1">Graphs</string>
    <string name="calendar1">Calendar</string>
    <string name="exercises">Exercises</string>
    <string name="monthly_exercise_graphs">Monthly exercise graphs:</string>
    <string name="graphs">Graphs</string>
    <string name="todo">TODO</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="elapsed_time">Elapsed time:</string>
    <string name="lap">Lap</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="help">Help</string>
    <string name="help_and_useful_links">Help and useful links:</string>
    <string name="help_and_faq">Help and FAQ</string>
    <string name="help_and_faq1">Help and FAQ:</string>
    <string name="gyms_near_you">Gyms near you:</string>
    <string name="maps">Maps</string>
    <string name="monthly_exercise_calendar">Monthly exercise calendar:</string>
    <string name="calendar">Calendar</string>
    <string name="add_exercises">Add exercises</string>
    <string name="Ime_seta">Ime seta vaj</string>
    <string name="nastej_vaje">Nastej vaje, ki jih želiš dodati (vsako v svojo vrstico)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_to_exercises">Back to Exercises</string>
    <string name="eating">1. <a href="https://www.mayoclinic.org/healthy-lifestyle/fitness/in-depth/exercise/art-20045506?p=1" target="_top">Eating and Exercise</a> (Mayo medical) </string>
    <string name="active">2. <a href="https://health.gov/myhealthfinder/topics/health-conditions/diabetes/get-active" target="_top">Active life</a> (Easy-reading) </string>
    <string name="activity">3. <a href="https://www.nhlbi.nih.gov/health/educational/lose_wt/phy_act.htm" target="_top">Activity guide</a> (Blood institute) </string>
    <string name="track">4. <a href="https://www.heart.org/-/media/files/health-topics/answers-by-heart/pe-abh-how-can-i-keep-track-of-physical-activity-and-eating-ucm_300471.pdf" target="_top">Track your activity</a> (Easy-reading) </string>
    <string name="basis">5. <a href="https://www.cdc.gov/physicalactivity/basics/index.htm" target="_top">Basic Activities</a> (Human services) </string>
    <string name="startExercise">Start Exercise</string>
    <string name="steps3">Steps</string>
    <string name="max_calculator">Max Calculator</string>
    <string name="dailGoal">Daily Goals</string>
    <string name="home3">Home</string>
    <string name="steps1">Steps</string>
    <string name="workouts2">Workouts</string>
    <string name="add_new_exercise">Add new exercise:</string>
    <string name="calculate_max_lift">Calculate Max Lift</string>
    <string name="weight">Weight</string>
    <string name="reps">Reps</string>
    <string name="calculate">CALCULATE</string>
    <string name="results">Results:</string>
    <string name="set_daily_goals">Set daily goals:</string>
    <string name="daily_workouts">Daily workouts</string>
    <string name="set">SET</string>
    <string name="daily_steps">Daily steps</string>
    <string name="steps2">Steps</string>
    <string name="start1">START</string>
    <string name="_0">0</string>
    <string name="step_counter">Step Counter</string>
    <string name="warmup_video">Warmup video:</string>
    <string name="workouts">Workouts</string>
    <string name="steps">Steps</string>
    <string name="back">Back</string>
    <string name="finish_exercise">Finish Exercise:</string>
    <string name="finish_exercise1">Finish exercise</string>
    <string name="add_previous_exercise">Add previous exercise</string>
    <string name="add_exercise3">Add exercise</string>
    <string name="select_previous_exercise">Select previous exercise:</string>
    <string name="select_exercise">Select exercise:</string>
    <string name="next_graph">Next Graph</string>
    <string name="add_exercise2">Add exercise</string>
    <string name="open1">OPEN</string>
    <string name="finish1">FINISH</string>
    <string name="pic">pic</string>
    <string name="step_counter1">Step Counter:</string>
    <string name="calculate_max_lift1">Calculate Max Lift:</string>
    <string name="set_exercise">Set Exercise</string>
    <string name="list_the_desired_exercises_each_in_separate_row">List the desired exercises (each in separate row)</string>
    <string name="name_of_exercise_set">Name of exercise set</string>
    <string name="finish">FINISH</string>
    <string name="image">image</string>
    <string name="max_lift_calculator">Max Lift Calculator</string>

</resources>