<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/addExercise2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="343dp"
        android:text="@string/add_exercise"
        android:textColor="#FFFFFF"
        app:backgroundTint="#808E8E8E"
        app:iconTint="#040303"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activeItems3"
        app:strokeColor="#020202"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:gravity="start"
        android:text="@string/exercises"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:background="@drawable/textviewborderdark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/activeItems3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="328dp"
        android:text="@string/add_exercise1"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activeItems12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="204dp"
        android:text="@string/finish_exercise"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activeItems2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:text="@string/active_exercises1"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/textviewborder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activeItems2"

        />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="175dp"
        android:background="@drawable/textviewborder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activeItems2"

        />

    <Button
        android:id="@+id/StartExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:text="@string/startExercise"
        android:textColor="#FFFFFF"
        app:backgroundTint="#808E8E8E"
        app:iconTint="#040303"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activeItems2"
        app:strokeColor="#020202"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/finishExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="28dp"
        android:text="@string/finish_exercise1"
        android:textColor="#FFFFFF"
        app:backgroundTint="#808E8E8E"
        app:iconTint="#040303"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activeItems2"
        app:strokeColor="#020202"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>