<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/addExercise3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="24dp"
        android:text="@string/start"
        android:textColor="#FFFFFF"
        app:backgroundTint="#808E8E8E"
        app:iconTint="#040303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:strokeColor="#020202"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/addExercise4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginLeft="184dp"
        android:layout_marginTop="24dp"
        android:text="@string/stop"
        android:textColor="#FFFFFF"
        app:backgroundTint="#808E8E8E"
        app:iconTint="#040303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:strokeColor="#020202"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/addExercise5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/reset"
        android:textColor="#FFFFFF"
        app:backgroundTint="#808E8E8E"
        app:iconTint="#040303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addExercise4"
        app:strokeColor="#020202"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/addExercise6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginLeft="184dp"
        android:layout_marginTop="8dp"
        android:text="@string/lap"
        android:textColor="#FFFFFF"
        app:backgroundTint="#808E8E8E"
        app:iconTint="#040303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addExercise4"
        app:strokeColor="#020202"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/activeItems6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp"
        android:text="@string/elapsed_time"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:gravity="start"
        android:text="@string/stopwatch"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:background="@drawable/textviewborderdark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/textviewborder"
        android:gravity="center_horizontal"
        android:text="@string/_00_00_00"
        android:textAlignment="center"
        android:textColor="@color/ldark"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activeItems6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="300dp"
        android:layout_height="140dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textviewborder"
        android:scrollbars="vertical"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addExercise6" />

</androidx.constraintlayout.widget.ConstraintLayout>