<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dailyGoals2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/select_exercise"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activeWorkoutsContainer" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/textviewborder"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activeWorkoutsContainer" />

    <TextView
        android:id="@+id/activeItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:text="@string/active_exercises1"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/activeWorkoutsContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dailyGoals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="5dp"
        android:text="@string/daily_goals"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addExercise" />


    <Button
        android:id="@+id/addExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="68dp"
        android:text="@string/add_exercise2"
        android:textColor="@drawable/buttoncolor"
        app:backgroundTint="#808E8E8E"
        app:iconTint="#040303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activeWorkoutsContainer"
        app:strokeColor="#020202"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/activeWorkoutsContainer"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/textviewborder"
        android:paddingStart="5dp"
        android:paddingTop="2dp"
        android:paddingEnd="5dp"
        android:paddingBottom="2dp"
        android:scrollbars="vertical"
        android:text="@string/active_workouts_here"
        app:layout_constraintBottom_toTopOf="@+id/addExercise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activeItems" />

    <FrameLayout
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="388dp"
        android:layout_weight="0.4"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.example.fitnessemp.ProgressCircle
            android:id="@+id/stepBar"
            android:layout_width="150dp"
            android:layout_gravity="center"
            android:layout_height="150dp"
            android:layout_marginEnd="0dp"
            app:progress="35"
            app:progressBarThickness="4dp"

            />

        <TextView
            android:id="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="60dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/steps"
            android:textStyle="bold" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="388dp"
        android:layout_weight="0.4"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.example.fitnessemp.ProgressCircle
            android:id="@+id/workoutBar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="0dp"
            android:layout_gravity="center"
            app:progress="35"
            app:progressBarThickness="4dp"

            />

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="60dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/workouts"
            android:textStyle="bold" />

    </FrameLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:text="@string/home"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/activeItems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:background="@drawable/textviewborderdark"
        tools:ignore="RtlCompat" />
</androidx.constraintlayout.widget.ConstraintLayout>