<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MaxCalculator">


    <TextView
        android:id="@+id/max_calculator_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/set_daily_goals"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/steps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/steps"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/textviewborder"
        android:ems="10"
        android:hint="@string/daily_steps"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/max_calculator_heading"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/wrkouts"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/textviewborder"
        android:ems="10"
        android:hint="@string/daily_workouts"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/steps"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/setG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:text="@string/set"
        android:textColor="@drawable/buttoncolor"
        app:backgroundTint="#808E8E8E"
        app:iconTint="#040303"
        app:strokeColor="#020202"
        app:strokeWidth="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrkouts" />

</androidx.constraintlayout.widget.ConstraintLayout>